--- a/publications.html
+++ b/publications.html
@@ -2,7 +2,7 @@
 <h3>Journals</h3>
 <p>[J18]&nbsp;A. Shojaeifard, K-K. Wong, W. Yu, G. Zheng, J. Tang, "Full-Duplex Cloud Radio Access Network: Stochastic Design and Analysis," <em>IEEE Trans. Wireless Commun.</em>, accepted 2018.</p>
 <p>[J17]&nbsp;J. Tang, T. Dai, M. Cui, D. K. C. So, A. Shojaeifard, K-K. Wong, Z. Li, "Optimization for Maximizing Sum Secrecy Rate in SWIPT-enabled NOMA Systems," <em>IEEE Access</em>, accepted 2018.</p>
-<p>[J16]&nbsp;J. Tang, D. K. C. So, N. Zhao, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with SWIPT in MIMO Broadcast Channels for Internet of Things," <em>IEEE Internet Things J.</em>, accepted 2018.</p>
+<p>[J16]&nbsp;J. Tang, D. K. C. So, N. Zhao, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with SWIPT in MIMO Broadcast Channels for Internet of Things," <em>IEEE Internet Things J.</em>, vol. 5, no. 4, pp. 2605-2619, Aug. 2018.</p>
 <p>[J15]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard, K-K. Wong, "Full-Duplex Small-Cell Networks: A Physical-Layer Security Perspective," <em>IEEE Trans. Commun.</em>, vol. 66, no. 7, pp. 3006-3021, July 2018.</p>
 <p>[J14]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, "Energy-Efficient Heterogeneous Cellular Networks with Spectrum Underlay and Overlay Access," <em>IEEE Trans. Veh. Technol.</em>, vol. 67, no. 3, pp. 2439-2453, March 2018.</p>
 <p>[J13]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Massive MIMO-Enabled Full-Duplex Cellular Networks," <em>IEEE Trans. Commun.</em>, vol. 65, no. 11, pp. 4734-4750, Nov. 2017.</p>
