--- a/publications.html
+++ b/publications.html
@@ -1,7 +1,7 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
 <h3>Journals</h3>
-<p>[J19]&nbsp;J. Tang, A. Shojaeifard, D. K. C. So, K.-K. Wong, N. Zhao, "Energy Efficiency Optimization for CoMP-SWIPT Heterogeneous Networks," <em>IEEE Trans. Commun.</em>, accepted 2018.</p>
-<p>[J18]&nbsp;A. Shojaeifard, K.-K. Wong, W. Yu, G. Zheng, J. Tang, "Full-Duplex Cloud Radio Access Network: Stochastic Design and Analysis," <em>IEEE Trans. Wireless Commun.</em>, accepted 2018.</p>
+<p>[J19]&nbsp;J. Tang, A. Shojaeifard, D. K. C. So, K.-K. Wong, N. Zhao, "Energy Efficiency Optimization for CoMP-SWIPT Heterogeneous Networks," <em>IEEE Trans. Commun.</em>, vol. 66, no. 12, pp. 6368-6383, Dec. 2018.</p>
+<p>[J18]&nbsp;A. Shojaeifard, K.-K. Wong, W. Yu, G. Zheng, J. Tang, "Full-Duplex Cloud Radio Access Network: Stochastic Design and Analysis," <em>IEEE Trans. Wireless Commun.</em>, vol. 17, no. 11, pp. 7190-7207, Nov. 2018.</p>
 <p>[J17]&nbsp;J. Tang, T. Dai, M. Cui, D. K. C. So, A. Shojaeifard, K.-K. Wong, Z. Li, "Optimization for Maximizing Sum Secrecy Rate in SWIPT-enabled NOMA Systems," <em>IEEE Access</em>, vol. 6, pp. 43440-43449, Aug. 2018.</p>
 <p>[J16]&nbsp;J. Tang, D. K. C. So, N. Zhao, A. Shojaeifard, K.-K. Wong, "Energy Efficiency Optimization with SWIPT in MIMO Broadcast Channels for Internet of Things," <em>IEEE Internet Things J.</em>, vol. 5, no. 4, pp. 2605-2619, Aug. 2018.</p>
 <p>[J15]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard, K.-K. Wong, "Full-Duplex Small-Cell Networks: A Physical-Layer Security Perspective," <em>IEEE Trans. Commun.</em>, vol. 66, no. 7, pp. 3006-3021, July 2018.</p>
