--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,3 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
-<p>BT Technology, Adastral Park, Ipswich IP5 3RE, UK</p>
+<p>BT, Adastral Park, Ipswich IP5 3RE, UK</p>
 <p>E-Mail:&nbsp;<a href="mailto:arman.shojaeifard@bt.com">arman.shojaeifard[at]bt.com&nbsp;</a></p>
