--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
 <h2>ARMAN SHOJAEIFARD | HOMEPAGE&nbsp;</h2>
 <h3>About<a style="pointer-events: none; cursor: default;" href="https://armansfd.github.io/arman.png"><img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="132" height="145" /></a></h3>
-<p>I am a Senior Researcher within the Converged Networks Group at BT.&nbsp;My background is in applied probability theory, optimisation techniques, and system-level simulations for wireless networks.</p>
+<p>I am a Research Manager within the Converged Networks Group at BT.&nbsp;My background is in applied probability theory, optimisation techniques, and system-level simulations for wireless networks.</p>
 <p>I have&nbsp;a B.Eng. degree in Information Systems Engineering from Imperial College London, UK, an M.Sc. degree in Signal Processing (with Distinction), together with a Ph.D. degree in Telecommunications from King's College London, UK. &nbsp;&nbsp;</p>
 <p>&nbsp;</p>
