--- a/publications.html
+++ b/publications.html
@@ -20,6 +20,7 @@
 <p>[J2]&nbsp;A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Design and Optimization of CDMA Networks in Frequency-Selective Fading Channels," <em>IEEE Wireless Commun. Lett.</em>, vol. 1, no. 6, pp. 605-608, Dec. 2012.</p>
 <p>[J1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Joint Physical Layer and Data Link Layer Optimization of CDMA-Based Networks," <em>IEEE Trans. Wireless Commun.</em>, vol. 10, no. 10, pp. 3278-3287, Oct. 2011.</p>
 <h3>Conferences</h3>
+<p>[C25]&nbsp;T. Faghani, A. Shojaeifard, K.-K. Wong,&nbsp;A. H. Aghvami, &ldquo;Deep Learning-Based Decision Region for MIMO Detection,"&nbsp;<em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2019.</p>
 <p>[C25]&nbsp;A. Shojaeifard, K.-K. Wong, W. Yu, G. Zheng,&nbsp;J. Tang, &ldquo;Full-Duplex Enabled Cloud Radio Access Network,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2018.</p>
 <p>[C24]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard,&nbsp;K.-K. Wong, &ldquo;Full-Duplex MIMO Small-Cells: Secrecy Capacity Analysis,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2018.</p>
 <p>[C23]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard,&nbsp;K.-K. Wong, &ldquo;Energy-Efficient Resource Allocation in CoMP-SWIPT Heterogeneous Networks,"&nbsp;<em>IEEE Int. Conf. Commun. China (ICCC)</em>, 2017.</p>
