--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
 <h2>ARMAN SHOJAEIFARD | HOMEPAGE&nbsp;</h2>
 <h3>About<a style="pointer-events: none; cursor: default;" href="https://armansfd.github.io/arman.png"><img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="132" height="145" /></a></h3>
-<p>I am currently with BT Labs where I lead the collaborative European CELTIC-NEXT project on AIMM (AI-enabled Massive MIMO):&nbsp;<a href="https://www.celticnext.eu/project-aimm/">https://www.celticnext.eu/project-aimm/</a></p>
-<p>I am a 3GPP RAN1 Delegate for BT, contributing to the standardisation of 5G NR. I also represent BT as a member of the O-RAN Alliance WG3.&nbsp;</p>
+<p>I am currently with BT Labs where I lead the CELTIC-NEXT European collaborative project on AIMM (AI-enabled Massive MIMO):&nbsp;<a href="https://www.celticnext.eu/project-aimm/">https://www.celticnext.eu/project-aimm/</a></p>
+<p>My responsbilities also include represnting BT at RAN standardisation bodies including 3GPP RAN1 WG and O-RAN Alliance WG3.&nbsp;</p>
 <p>I have an extensive experience of working in collaborative research projects including EPSRC UPFRONT, EPSRC Green HetNets, GreenTouch Consortium, and ICT FP7 ACROPOLIS with over 45 technical IEEE paper publications, &gt;550 citations and an h-index of 13.&nbsp;I am currently an Editor for&nbsp;<em>IEEE Wireless Communications Letters</em> and&nbsp;<em>IET Electronics Letters</em>.&nbsp;</p>
 <p>I have&nbsp;a BEng degree in Information Systems Engineering from Imperial College London, an MSc degree in Signal Processing (with Distinction) together with a PhD degree in Telecommunications from King's College London.&nbsp;I&nbsp;previously held post-doctoral research positions at University College London and University of Manchester.</p>
