--- a/publications.html
+++ b/publications.html
@@ -21,6 +21,8 @@
 <p>[J2]&nbsp;A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Design and Optimization of CDMA Networks in Frequency-Selective Fading Channels," <em>IEEE Wireless Commun. Lett.</em>, vol. 1, no. 6, pp. 605-608, Dec. 2012.</p>
 <p>[J1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Joint Physical Layer and Data Link Layer Optimization of CDMA-Based Networks," <em>IEEE Trans. Wireless Commun.</em>, vol. 10, no. 10, pp. 3278-3287, Oct. 2011.</p>
 <h3>Conferences</h3>
+<p>[C28]&nbsp;K. Briggs and A. Shojaeifard, &ldquo;RAN Coverage Areas Under 3GPP-compliant Pathloss Models,"&nbsp;<em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2020.</p>
+<p>[C27]&nbsp;T. Faghani, A. Shojaeifard, K.-K. Wong,&nbsp;A. H. Aghvami, &ldquo;Recurrent neural network channel estimation using measured massive MIMO data,"&nbsp;<em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2020.</p>
 <p>[C26]&nbsp;T. Faghani, A. Shojaeifard, K.-K. Wong,&nbsp;A. H. Aghvami, &ldquo;Deep Learning-Based Decision Region for MIMO Detection,"&nbsp;<em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2019.</p>
 <p>[C25]&nbsp;A. Shojaeifard, K.-K. Wong, W. Yu, G. Zheng,&nbsp;J. Tang, &ldquo;Full-Duplex Enabled Cloud Radio Access Network,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2018.</p>
 <p>[C24]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard,&nbsp;K.-K. Wong, &ldquo;Full-Duplex MIMO Small-Cells: Secrecy Capacity Analysis,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2018.</p>
