--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,6 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
 <h3>IEEE Journals</h3>
-<p>[J20]&nbsp;K.-K. Wong, A. Shojaeifard, K. F. Tong, and Y. Zhang, "Performance limits of fluid antenna systems," <em>IEEE Commun. Lett.</em>, accepted. 2020.</p>
+<p>[J20]&nbsp;K.-K. Wong, A. Shojaeifard, K. F. Tong, and Y. Zhang, "Performance Limits of Fluid Antenna Systems," <em>IEEE Commun. Lett.</em>, accepted. 2020.</p>
 <p>[J19]&nbsp;J. Tang, A. Shojaeifard, D. K. C. So, K.-K. Wong, N. Zhao, "Energy Efficiency Optimization for CoMP-SWIPT Heterogeneous Networks," <em>IEEE Trans. Commun.</em>, vol. 66, no. 12, pp. 6368-6383, Dec. 2018.</p>
 <p>[J18]&nbsp;A. Shojaeifard, K.-K. Wong, W. Yu, G. Zheng, J. Tang, "Full-Duplex Cloud Radio Access Network: Stochastic Design and Analysis," <em>IEEE Trans. Wireless Commun.</em>, vol. 17, no. 11, pp. 7190-7207, Nov. 2018.</p>
 <p>[J17]&nbsp;J. Tang, T. Dai, M. Cui, D. K. C. So, A. Shojaeifard, K.-K. Wong, Z. Li, "Optimization for Maximizing Sum Secrecy Rate in SWIPT-enabled NOMA Systems," <em>IEEE Access</em>, vol. 6, pp. 43440-43449, Aug. 2018.</p>
@@ -22,7 +22,7 @@
 <p>[J1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Joint Physical Layer and Data Link Layer Optimization of CDMA-Based Networks," <em>IEEE Trans. Wireless Commun.</em>, vol. 10, no. 10, pp. 3278-3287, Oct. 2011.</p>
 <h3>IEEE Conferences</h3>
 <p>[C28]&nbsp;K. Briggs and A. Shojaeifard, &ldquo;RAN Coverage Areas Under 3GPP-compliant Pathloss Models,"&nbsp;<em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2020.</p>
-<p>[C27]&nbsp;T. Faghani, A. Shojaeifard, K.-K. Wong,&nbsp;A. H. Aghvami, &ldquo;Recurrent neural network channel estimation using measured massive MIMO data,"&nbsp;<em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2020.</p>
+<p>[C27]&nbsp;T. Faghani, A. Shojaeifard, K.-K. Wong,&nbsp;A. H. Aghvami, &ldquo;Recurrent Neural Network Channel Estimation Using Measured Massive MIMO Data,"&nbsp;<em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2020.</p>
 <p>[C26]&nbsp;T. Faghani, A. Shojaeifard, K.-K. Wong,&nbsp;A. H. Aghvami, &ldquo;Deep Learning-Based Decision Region for MIMO Detection,"&nbsp;<em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2019.</p>
 <p>[C25]&nbsp;A. Shojaeifard, K.-K. Wong, W. Yu, G. Zheng,&nbsp;J. Tang, &ldquo;Full-Duplex Enabled Cloud Radio Access Network,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2018.</p>
 <p>[C24]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard,&nbsp;K.-K. Wong, &ldquo;Full-Duplex MIMO Small-Cells: Secrecy Capacity Analysis,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2018.</p>
