--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,7 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
 <h3>IEEE Journals</h3>
-<p>[J20]&nbsp;K.-K. Wong, A. Shojaeifard, K. F. Tong, and Y. Zhang, "Performance Limits of Fluid Antenna Systems," <em>IEEE Commun. Lett.</em>, accepted. 2020.</p>
+<p>[J21]&nbsp;K.-K. Wong, A. Shojaeifard, K. F. Tong, and Y. Zhang, "Performance Limits of Fluid Antenna Systems," <em>IEEE Commun. Lett.</em>, accepted. 2020.</p>
+<p>[J20]&nbsp;K. Briggs and A. Shojaeifard, "Coverage Regions under Multi-Slope Pathloss Propagation," <em>IEEE Trans. Veh. Technol.</em>, accepted. 2020.</p>
 <p>[J19]&nbsp;J. Tang, A. Shojaeifard, D. K. C. So, K.-K. Wong, N. Zhao, "Energy Efficiency Optimization for CoMP-SWIPT Heterogeneous Networks," <em>IEEE Trans. Commun.</em>, vol. 66, no. 12, pp. 6368-6383, Dec. 2018.</p>
 <p>[J18]&nbsp;A. Shojaeifard, K.-K. Wong, W. Yu, G. Zheng, J. Tang, "Full-Duplex Cloud Radio Access Network: Stochastic Design and Analysis," <em>IEEE Trans. Wireless Commun.</em>, vol. 17, no. 11, pp. 7190-7207, Nov. 2018.</p>
 <p>[J17]&nbsp;J. Tang, T. Dai, M. Cui, D. K. C. So, A. Shojaeifard, K.-K. Wong, Z. Li, "Optimization for Maximizing Sum Secrecy Rate in SWIPT-enabled NOMA Systems," <em>IEEE Access</em>, vol. 6, pp. 43440-43449, Aug. 2018.</p>
