--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
 <h2>ARMAN SHOJAEIFARD | HOMEPAGE&nbsp;</h2>
 <h3>About<a style="pointer-events: none; cursor: default;" href="https://armansfd.github.io/arman.png"><img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="132" height="145" /></a></h3>
-<p>+7 years of work exprience in R&amp;D of transmission technologies and architectures for 4G LTE/LTE-A, 5G NR, and beyond.&nbsp;</p>
+<p>+7 years of work experience in R&amp;D of transmission technologies and architectures for 4G LTE/LTE-A, 5G NR, and beyond.&nbsp;</p>
 <p>I am currently with InterDigital where I lead the CELTIC-NEXT European collaborative project on AIMM (AI-enabled Massive MIMO):&nbsp;<a href="https://www.celticnext.eu/project-aimm/">https://www.celticnext.eu/project-aimm/</a></p>
 <p>I was previously a Wireless Research Manager and 3GPP RAN1 WG Delegate at British Telecoms Labs. Prior, I held post-doctoral research positions at University College London and University of Manchester.</p>
 <p>I have&nbsp;a BEng degree in Information Systems Engineering from Imperial College London, an MSc degree in Signal Processing (with Distinction) together with a PhD degree in Telecommunications from King's College London.&nbsp;</p>
