--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,3 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
-<p>BT Labs, Adastral Park, Ipswich IP5 3RE, UK.</p>
-<p>E-Mail:&nbsp;<a href="mailto:arman.shojaeifard@bt.com">arman.shojaeifard[at]bt.com&nbsp;</a></p>
+<p>InterDigital Labs, 64 Great Eastern St, Hackney, London EC2A 3QR, UK.</p>
+<p>E-Mail:&nbsp;<a href="mailto:arman.shojaeifard@interdigital.com">arman.shojaeifard[at]interdigital.com&nbsp;</a></p>
