--- a/publications.html
+++ b/publications.html
@@ -1,5 +1,6 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
 <h3>IEEE Journals</h3>
+<p>[J22]&nbsp;K.-K. Wong, A. Shojaeifard, K. F. Tong, and Y. Zhang, "Fluid Antenna Systems," <em>IEEE Trans. Wireless Commun.</em>, accepted. 2020.</p>
 <p>[J21]&nbsp;K.-K. Wong, A. Shojaeifard, K. F. Tong, and Y. Zhang, "Performance Limits of Fluid Antenna Systems," <em>IEEE Commun. Lett.</em>, accepted. 2020.</p>
 <p>[J20]&nbsp;K. Briggs and A. Shojaeifard, "Coverage Regions under Multi-Slope Pathloss Propagation," <em>IEEE Trans. Veh. Technol.</em>, accepted. 2020.</p>
 <p>[J19]&nbsp;J. Tang, A. Shojaeifard, D. K. C. So, K.-K. Wong, N. Zhao, "Energy Efficiency Optimization for CoMP-SWIPT Heterogeneous Networks," <em>IEEE Trans. Commun.</em>, vol. 66, no. 12, pp. 6368-6383, Dec. 2018.</p>
